--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="fadeMainPicture"></div>
                 <div class="w990px">                    
                     <div class="welcomeTitle">
-                        <h1>Kradle</h1>
+                        <h1>Kradle Showcase</h1>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text<br><br></p>
                         <div class="scrollDown"></div>
                     </div>                                            
