--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/responsive.css" type="text/css" />
     <link rel="stylesheet" href="css/custom.css" type="text/css" />
-	<link rel="stylesheet" href="css/scroller_pagination.css" type="text/css" />
+    <link rel="stylesheet" href="css/scroller_pagination.css" type="text/css" />
+    <link rel="stylesheet" href="css/radial_menu.css" type="text/css" />
 	<link rel="stylesheet" href="js/slick/slick.css" type="text/css" /> 
 	<!-- JS -->
 	<script src="js/jquery.min.js"></script> 
 	<!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <script src="js/modernizr-2.6.2.min.js"></script>
 	<script src="js/html5loader/jquery.html5Loader.min.js"></script>
 	<script src="js/mobile-events/jquery.mobile-events.min.js"></script>
 	<script src="js/gsap/TweenMax.min.js"></script>
@@ -35,7 +37,8 @@
 	<script src="js/slick/slick.js" type="text/javascript"></script>
 	<script src="js/scrollMagic/jquery.scrollmagic.js" type="text/javascript"></script>
 	<script src="js/scrollMagic/jquery.scrollmagic.debug.js" type="text/javascript"></script>
-	<script src="js/functions.js" type="text/javascript"></script>
+    <script src="js/functions.js" type="text/javascript"></script>
+	<script src="js/polyfills.js" type="text/javascript"></script>
 	<script src="js/scripts.js" type="text/javascript"></script></head>
 <body>
     <!-- NAVIGATION -->
@@ -96,6 +99,21 @@
             <a href="#">Pricing / Free Trial</a>
             <a href="#">Login</a>
         </nav>
+
+        <nav class="radial">
+            <!-- Start Nav Structure -->
+            <button class="cn-button" id="cn-button"></button>
+            <div class="cn-wrapper" id="cn-wrapper">
+                <ul>
+                    <li><a href="#about"><span>About</span></a></li>
+                    <li><a href="#features"><span>Features</span></a></li>
+                    <li><a href="#price"><span>Pricing</span></a></li>
+                    <li><a href="#news"><span>News</span></a></li>
+                    <li><a href="#contact"><span>Contact</span></a></li>
+                 </ul>
+            </div>
+            <!-- End of Nav Structure -->
+        </nav>  
     </header>        
 
     <div id="main">
@@ -168,5 +186,31 @@
                     </div>
         </section>                        
     </div>
+    <script type="text/javascript">
+    (function(){
 
+    var button = document.getElementById('cn-button'),
+    wrapper = document.getElementById('cn-wrapper');
+
+    //open and close menu when the button is clicked
+    var open = false;
+    button.addEventListener('click', handler, false);
+
+    function handler(){
+      if(!open){
+        this.innerHTML = "Close";
+        classie.add(wrapper, 'opened-nav');
+      }
+      else{
+        this.innerHTML = "Menu";
+        classie.remove(wrapper, 'opened-nav');
+      }
+      open = !open;
+    }
+    function closeWrapper(){
+        classie.remove(wrapper, 'opened-nav');
+    }
+
+})();
+    </script>
 </body>
